--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,21 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <application
+            android:name=".ToDoApplication"
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
             android:icon="@mipmap/ic_launcher"
-            android:name=".ToDoApplication"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.ToDoListWithCompose"
             tools:targetApi="31">
+        <activity
+                android:name=".IconChoiceActivity"
+                android:exported="false"
+                android:label="@string/title_activity_icon_choice"
+                android:theme="@style/Theme.ToDoListWithCompose"/>
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
@@ -27,7 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <receiver android:name="com.example.todolistwithcompose.utils.AlarmReceiver"/>
+
+        <receiver android:name=".utils.AlarmReceiver"/>
     </application>
 
 </manifest>
